@@ -4,6 +4,8 @@ import S05T2N1RoyoTerolMarina.model.domain.Game;
 import S05T2N1RoyoTerolMarina.model.domain.Player;
 import S05T2N1RoyoTerolMarina.model.dto.GameDTO;
 import S05T2N1RoyoTerolMarina.model.dto.PlayerDTO;
+import S05T2N1RoyoTerolMarina.model.exception.NoContentFoundException;
+import S05T2N1RoyoTerolMarina.model.exception.PlayerNotFoundException;
 import S05T2N1RoyoTerolMarina.model.repository.GamesRepository;
 import S05T2N1RoyoTerolMarina.model.repository.PlayersRepository;
 import org.modelmapper.ModelMapper;
@@ -22,9 +24,6 @@ public class GameServiceImplImpl implements GameService{
     private PlayersRepository playersRepository;
     private GamesRepository gamesRepository;
 
-    //private static Player playerRequest;
-    private static PlayerDTO playerDTORequest;
-
     public GameServiceImplImpl(PlayersRepository playersRepository, GamesRepository gamesRepository) {
         super();
         this.playersRepository = playersRepository;
@@ -35,34 +34,42 @@ public class GameServiceImplImpl implements GameService{
 
     @Override // FALTARIA DATA REGISTRE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     public PlayerDTO createPlayer(PlayerDTO playerDTO) {
-
         Player playerRequest;
+        PlayerDTO playerDtoResponse;
 
-        playerDTO.setName(setPlayersName(playerDTO));
+        playerRequest = playerConvertEntity(playerDTO);
+        playerRequest.setName(setPlayersName(playerRequest));
 
-        if (playerDTO.getName().equalsIgnoreCase("")) {
-            playerRequest = null;
+        if (playerRequest.getName().equalsIgnoreCase("")) {
+            return null;
         } else {
-            playerRequest = playersRepository.save(playerConvertEntity(playerDTO));
+            playersRepository.save(playerRequest);
+            playerDtoResponse = playerConvertDTO(playerRequest);
+            playerDtoResponse.setSuccessRate(calculateRate(playerDtoResponse));
+
+            return playerDtoResponse;
         }
-
-        return playerConvertDTO(playerRequest);
-
     }
 
     @Override
     public GameDTO playGame(Long id) {
-        Player playerRequest = null;
+        Player playerRequest;
         Game game = null;
 
-        if (playersRepository.existsById(id)){
-            Optional<Player> playerData = playersRepository.findById(id);
-            playerRequest = playerData.get();
-            game = new Game(playerRequest);
-            gamesRepository.save(game);
+        try {
+            if (playersRepository.existsById(id)){
+                Optional<Player> playerData = playersRepository.findById(id);
+                playerRequest = playerData.get();
+                game = new Game(playerRequest);
+                gamesRepository.save(game);
+            }
+
+            return gameConvertDTO(game);
+
+        } catch (PlayerNotFoundException e) {
+            throw new PlayerNotFoundException("Player", id);
         }
 
-        return gameConvertDTO(game);
     }
 
     @Override
@@ -70,57 +77,77 @@ public class GameServiceImplImpl implements GameService{
         List<Player> playersList;
         List<String> returnList;
 
-        playersList = playersRepository.findAll().stream().toList();
+        try {
+            playersList = playersRepository.findAll().stream().toList();
 
-        if (gamesRepository.findAll().isEmpty()){
-            returnList = null;
-        } else {
-            returnList = new ArrayList<>();
-            for (Player player : playersList) {
-                returnList.add(player.toString());
+            if (gamesRepository.findAll().isEmpty()){
+                returnList = null;
+            } else {
+                returnList = new ArrayList<>();
+                for (Player player : playersList) {
+                    returnList.add(player.toString());
+                }
             }
+
+            return returnList;
+
+        } catch (NoContentFoundException e) {
+            throw new NoContentFoundException("Unable to access players repository");
         }
 
-        return returnList;
     }
 
     @Override
     public List<GameDTO> getGamesPlayerId(Long id) {
         Player playerRequest;
-        List<GameDTO> gamesList = null;
+        List<GameDTO> gamesList;
 
-        if (playersRepository.existsById(id)){
-            Optional<Player> playerData = playersRepository.findById(id);
-            playerRequest = playerData.get();
+        try {
+            if (playersRepository.existsById(id)) {
+                if (gamesRepository.findAll().stream().noneMatch(game -> game.getPlayer().getId() == id)) {
+                    gamesList = null;
+                } else {
+                    Optional<Player> playerData = playersRepository.findById(id);
+                    playerRequest = playerData.get();
 
-            gamesList = gamesRepository.findAll().stream()
-                    .filter(game -> Objects.equals(game.getPlayer().getId(), playerRequest.getId()))
-                    .toList()
-                    .stream().map(this::gameConvertDTO)
-                    .collect(Collectors.toList());
-        } else {
-            gamesList = new ArrayList<>();
+                    gamesList = gamesRepository.findAll().stream()
+                            .filter(game -> Objects.equals(game.getPlayer().getId(), playerRequest.getId()))
+                            .toList()
+                            .stream().map(this::gameConvertDTO)
+                            .collect(Collectors.toList());
+                }
+            } else {
+                gamesList = new ArrayList<>();
+            }
+
+            return gamesList;
+
+        } catch (PlayerNotFoundException e) {
+            throw new PlayerNotFoundException("Player", id);
         }
-
-        return gamesList;
     }
 
     @Override
     public String getAverageAllPlayers() {
         String output;
 
-        if (!gamesRepository.findAll().isEmpty()){
-            double average = gamesRepository.findAll().stream()
-                    .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
-                    .average()
-                    .orElse(0.0) * 100.0;
+        try {
+            if (!gamesRepository.findAll().isEmpty()){
+                double average = gamesRepository.findAll().stream()
+                        .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
+                        .average()
+                        .orElse(0.0) * 100.0;
 
-            output = String.format("%.2f", average);
-        } else {
-            output = "";
+                output = String.format("%.2f", average);
+            } else {
+                output = "";
+            }
+
+            return output;
+
+        } catch (NoContentFoundException e) {
+            throw new NoContentFoundException("Unable to access games repository");
         }
-
-        return output;
     }
 
     @Override
@@ -128,9 +155,9 @@ public class GameServiceImplImpl implements GameService{
         List<PlayerDTO> playerDTOList;
 
         playerDTOList = getSuccessRatePlayers();
+        playerDTOList.removeIf(playerDTO -> playerDTO.getSuccessRate().equalsIgnoreCase("Still haven't played any game."));
 
         return playerDTOList.stream()
-                .filter(playerDTO -> !playerDTO.getSuccessRate().equalsIgnoreCase("Still haven't played any game"))
                 .min(Comparator.comparingDouble(player -> Double.parseDouble(player.getSuccessRate())))
                 .stream().findAny()
                 .orElse(null);
@@ -141,28 +168,38 @@ public class GameServiceImplImpl implements GameService{
         List<PlayerDTO> playerDTOList;
 
         playerDTOList = getSuccessRatePlayers();
+        playerDTOList.removeIf(playerDTO -> playerDTO.getSuccessRate().equalsIgnoreCase("Still haven't played any game."));
 
         return playerDTOList.stream()
-                .filter(playerDTO -> !playerDTO.getSuccessRate().equalsIgnoreCase("Still haven't played any game"))
                 .max(Comparator.comparingDouble(player -> Double.parseDouble(player.getSuccessRate())))
                 .stream().findAny()
                 .orElse(null);
     }
 
-    @Override // AFEGIR EXCEPTION !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! <--------------------
+    @Override
     public PlayerDTO updatePlayerId(PlayerDTO playerDTO, Long id) {
         Player playerRequest;
+        PlayerDTO playerDtoResponse;
 
-        if (playersRepository.existsById(id)){
-            Optional<Player> playerData = playersRepository.findById(id);
-            playerRequest = playerData.get();
-            playerRequest.setName(playerDTO.getName());
-            playersRepository.save(playerRequest);
-        } else {
-            playerRequest = null;
+        try {
+            if (playersRepository.existsById(id)) {
+                Optional<Player> playerData = playersRepository.findById(id);
+                playerRequest = playerData.get();
+                playerRequest.setName(playerDTO.getName());
+                playersRepository.save(playerRequest);
+
+                playerDtoResponse = playerConvertDTO(playerRequest);
+                playerDtoResponse.setSuccessRate(calculateRate(playerDtoResponse));
+            } else {
+                playerDtoResponse = null;
+            }
+
+            return playerDtoResponse;
+
+        } catch (PlayerNotFoundException e) {
+            throw new PlayerNotFoundException("Player", id);
         }
 
-        return playerConvertDTO(playerRequest);
 
     }
 
@@ -183,7 +220,7 @@ public class GameServiceImplImpl implements GameService{
                 }
             }
         } catch (Exception e){
-            // AFEGIR EXCEPTION !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! <--------------------
+            throw new PlayerNotFoundException("Player", id);
         }
 
         return found;
@@ -193,9 +230,11 @@ public class GameServiceImplImpl implements GameService{
 
     //endregion SERVICE
 
+
+
+
+
     //region USEFUL
-
-
 
     public PlayerDTO playerConvertDTO(Player player){
         return modelMapper.map(player, PlayerDTO.class);
@@ -212,40 +251,51 @@ public class GameServiceImplImpl implements GameService{
     private List<PlayerDTO> getSuccessRatePlayers() {
         List<PlayerDTO> playerDTOList;
 
-        playerDTOList = playersRepository.findAll().stream()
-                .map(this::playerConvertDTO)
-                .collect(Collectors.toList());
+        try {
+            playerDTOList = playersRepository.findAll().stream()
+                    .map(this::playerConvertDTO)
+                    .collect(Collectors.toList());
 
-        playerDTOList.forEach(player -> player.setSuccessRate(calculateRate(player)));
+            playerDTOList.forEach(player -> player.setSuccessRate(calculateRate(player)));
 
-        return playerDTOList;
+            return playerDTOList;
+
+        } catch (NoContentFoundException e) {
+            throw new NoContentFoundException("Unable to access players repository");
+        }
+
 
     }
 
     public String calculateRate(PlayerDTO playerDTO) {
 
-        if (gamesRepository.findAll().stream().anyMatch(game -> game.getPlayer().getId() == playerDTO.getId())) {
-            double result = gamesRepository.findAll().stream()
-                    .filter(game -> game.getPlayer().getId() == playerDTO.getId())
-                    .toList().stream()
-                    .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
-                    .average()
-                    .orElse(0.0) * 100;
+        try {
+            if (gamesRepository.findAll().stream().anyMatch(game -> game.getPlayer().getId() == playerDTO.getId())) {
+                double result = gamesRepository.findAll().stream()
+                        .filter(game -> game.getPlayer().getId() == playerDTO.getId())
+                        .toList().stream()
+                        .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
+                        .average()
+                        .orElse(0.0) * 100;
 
-            return String.format(String.valueOf(result), result);
-        } else {
-            return "Still haven't played any game.";
+                return String.format(String.valueOf(result), result);
+            } else {
+                return "Still haven't played any game.";
+            }
+        } catch (NoContentFoundException e) {
+            throw new NoContentFoundException("Unable to access games repository");
         }
+
     }
 
-    public String setPlayersName(PlayerDTO playerDTO){
+    public String setPlayersName(Player player){
         String playerName;
 
-        if (playerDTO.getName().equalsIgnoreCase("") || playerDTO.getName().isEmpty()){
+        if (player.getName().equalsIgnoreCase("") || player.getName().isEmpty()){
             playerName = "ANONYMOUS";
         } else {
-            if(!checkString(playerDTO.getName())){ // check if it already exists into the DDBB
-                playerName = playerDTO.getName();
+            if(!checkString(player.getName())){ // check if it already exists into the DDBB
+                playerName = player.getName();
             } else {
                 playerName = "";
             }
